==> siorpaes/ammeter/SSD1306/ssd1306.c <==
#include "ssd1306.h"
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#include <stdlib.h>
#include <string.h>
#include "stm32f0xx_hal.h"
#include "ssd1306.h"
#include "Adafruit_GFX.h"
#define SSD1306_ADDR (0x78)
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void display(void)
{
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
#if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
#endif
#if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
#endif
#if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
#endif

	HAL_I2C_Master_Transmit(i2cHandle, SSD1306_ADDR, framebuffer, sizeof(framebuffer), HAL_MAX_DELAY);
}

void ssd1306_command(uint8_t c) {
	HAL_StatusTypeDef err;
	uint8_t buf[2];

	buf[0] = 0;
	buf[1] = c;
	err = HAL_I2C_Master_Transmit(i2cHandle, SSD1306_ADDR, buf, 2, HAL_MAX_DELAY);
	if(err != HAL_OK)
		while(1);
}
