==> Christophe45/ESP32-Lorawan/src/libraries/SSD1306/src/ssd1306.cpp <==
 #include <pgmspace.h>
#include <stdlib.h>
#include <Wire.h>
#include <SPI.h>
#include "Adafruit_GFX.h"
#include "SSD1306.h"
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void SSD1306::ssd1306_command(uint8_t c) {
  if (sid != -1)
  {
    // SPI
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
    *dcport &= ~dcpinmask;
    *csport &= ~cspinmask;
#else
    digitalWrite(cs, HIGH);
    digitalWrite(dc, LOW);
    digitalWrite(cs, LOW);
#endif
    fastSPIwrite(c);
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
#else
    digitalWrite(cs, HIGH);
#endif
  }
  else
  {
    // I2C
    uint32_t timeout=millis();
    do{
      uint8_t control = 0x00;   // Co = 0, D/C = 0
      Wire.beginTransmission(_i2caddr);
      Wire.write(control);
      Wire.write(c);
      if(Wire.endTransmission()!=0){
        Serial.print(".");
//        log_e("cmd Failure=%d (%s)",Wire.lastError(),Wire.getErrorText(Wire.lastError()));
      }
    }while((millis()-timeout<100)&&(Wire.lastError()!=0));    
  }
}

void SSD1306::display(void) {
/* origional code
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
  #endif
*/
// bounding box 2018/07/12
  if(boundX0<=boundX1){
    if((boundX0>boundX1)||(boundY0>boundY1)||(boundX1>(SSD1306_LCDWIDTH-1))||(boundY1>(SSD1306_LCDHEIGHT-1))){
      Serial.printf("(%d,%d)-(%d,%d)\n",boundX0,boundY0,boundX1, boundY1);
      abort();
    }
  } else {
    boundX0 = 0;
    boundX1 = SSD1306_LCDWIDTH-1;
    boundY0 = 0;
    boundY1 = SSD1306_LCDHEIGHT -1;
  }
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(boundX0);   // Column start address (0 = reset)
  ssd1306_command(boundX1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(boundY0/8); // Page start address (0 = reset)
  ssd1306_command(boundY1/8); // Page end address

// end bounding box
  if (sid != -1)
  {
    // SPI
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
    *dcport |= dcpinmask;
    *csport &= ~cspinmask;
#else
    digitalWrite(cs, HIGH);
    digitalWrite(dc, HIGH);
    digitalWrite(cs, LOW);
#endif

    for (uint16_t i=0; i<(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8); i++) {
      fastSPIwrite(buffer[i+1]);
    }
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
#else
    digitalWrite(cs, HIGH);
#endif
  }
  else
  {
    if (((boundX0 != 0)||(boundX1 !=SSD1306_LCDWIDTH-1)||(boundY0 !=0)||(boundY1!=SSD1306_LCDHEIGHT-1))&&
     (boundX0<=boundX1)){ // partial screen update
      uint16_t b = ((boundY0 / 8)*SSD1306_LCDWIDTH)+boundX0;
      uint16_t len = (boundX1 - boundX0) +2;
      uint16_t lines = ((boundY1/8) - (boundY0/8))+1;
      do{
         //each line
        uint8_t save = buffer[b];
        buffer[b] = 0x40; // inject data marker
        uint8_t err = Wire.writeTransmission(_i2caddr,(uint8_t*)&buffer[b],len);
        buffer[b] = save; // restore screen data
        b += SSD1306_LCDWIDTH;        
        if(err!=0){
          log_e("partial update Failure=%d (%s)",err,Wire.getErrorText(err));
        }
      lines--;  
      }while(lines>0);
    } else{ // whole screen update    
      buffer[0] = 0x40; // Data marker for ssd1306e
      uint8_t err = Wire.writeTransmission(_i2caddr,buffer,(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8)+1);
      if(err!=0){
        log_e("update Failure=%d (%s)",err,Wire.getErrorText(err));
      }
    }
    
  // reset modified box to none modified.  
  boundX0 = SSD1306_LCDWIDTH-1;
  boundX1 = 0;
  boundY0 = SSD1306_LCDHEIGHT-1;
  boundY1 = 0;
  }
  
}
